FIx font-weight of buttons on iOS

--- a/packages/block-library/button/style.scss
+++ b/packages/block-library/button/style.scss
@@ -8,6 +8,7 @@
 	word-break: normal;
 	box-sizing: border-box;
 	border-color: currentcolor;
+	font-weight: inherit;
 
 	@include focus-styles;
 
